unpackaged/main/default/objects/ETDI_Detail__c/ETDI_Detail__c.object-meta.xml
<CustomObject>
    <label>ETDI Detail</label>
    <nameField>
        <displayFormat>ETDI-{0000}</displayFormat>
        <label>ETDI Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ETDI Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>