unpackaged/main/default/objects/ETDI_Detail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ETDI Details</relationshipLabel>
    <relationshipName>ETDI_Details</relationshipName>
    <type>Lookup</type>
</CustomField>