unpackaged/main/default/objects/ETDI_Detail__c/fields/Attended_Classes__c.field-meta.xml
<CustomField>
    <fullName>Attended_Classes__c</fullName>
    <description>Total of practical and theory attended classes</description>
    <formula>Practical_Attended_Classes__c +  Theory_Attended_Classes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Attended Classes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>