unpackaged/main/default/objects/ETDI_Detail__c/fields/Instructor_Name__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instructor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>