unpackaged/main/default/objects/ETDI_Detail__c/fields/Mock_Test_Result__c.field-meta.xml
<CustomField>
    <fullName>Mock_Test_Result__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mock Test Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>