unpackaged/main/default/objects/ETDI_Detail__c/fields/Pending_Classes__c.field-meta.xml
<CustomField>
    <fullName>Pending_Classes__c</fullName>
    <formula>Practical_Pending_Classes__c + Theory_Pending_Classes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Pending Classes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>