unpackaged/main/default/objects/ETDI_Detail__c/fields/Practical_Pending_Classes__c.field-meta.xml
<CustomField>
    <fullName>Practical_Pending_Classes__c</fullName>
    <label>Practical Pending Classes</label>
    <summaryFilterItems>
        <field>ETDI_Practical_Schedule__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>ETDI_Practical_Schedule__c.ETDI_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>