unpackaged/main/default/objects/ETDI_Detail__c/fields/Theory_Pending_Classes__c.field-meta.xml
<CustomField>
    <fullName>Theory_Pending_Classes__c</fullName>
    <label>Theory Pending Classes</label>
    <summaryFilterItems>
        <field>Theory_Class_Schedule__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>Theory_Class_Schedule__c.ETDI_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>